--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required (VERSION 2.8.11)
 project (SFML_TUTO)
 
-set(CMAKE_CXX_FLAGS "-g -W -Wall -pedantic ")
+set(CMAKE_CXX_FLAGS "-g -W -Wall -pedantic -std=c++11")
 
 include_directories("include")
 set(SHARED
